--- a/programmercards-nextjs/package.json
+++ b/programmercards-nextjs/package.json
@@ -12,7 +12,8 @@
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
     "next": "13.4.12",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-tilt": "^1.0.2"
   }
 }
