--- a/programmercards-nextjs/package.json
+++ b/programmercards-nextjs/package.json
@@ -11,9 +11,14 @@
   "dependencies": {
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
+    "mongodb": "^5.7.0",
+    "mongoose": "^7.4.0",
     "next": "13.4.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-tilt": "^1.0.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
