--- a/programmercards-nextjs/package.json
+++ b/programmercards-nextjs/package.json
@@ -14,6 +14,7 @@
     "mongodb": "^5.7.0",
     "mongoose": "^7.4.0",
     "next": "13.4.12",
+    "next-auth": "^4.22.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-tilt": "^1.0.2"
