--- a/programmercards-nextjs/package.json
+++ b/programmercards-nextjs/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
     "mongodb": "^5.7.0",
@@ -17,7 +18,8 @@
     "next-auth": "^4.22.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-tilt": "^1.0.2"
+    "react-tilt": "^1.0.2",
+    "swr": "^2.2.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
